# activemq-honeypot

./: .gitignore  Cargo.toml  Dockerfile  README.md  Service.toml  docker-compose.yml
.github/workflows/: rust.yml
src/: backend.rs  data.rs  fakeserver.rs  main.rs
