[package]
name = "activemq-honeypot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
log = "0.4.20"
simplelog = "0.12.1"
hex = "0.4.3"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0.104", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.108"
chrono = "0.4.31"
bcrypt = "0.15"